--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,18 +12,10 @@ html * {
 }
 
 body {
- background: 
- radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent),
- radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent) 50px 50px,
- linear-gradient(#242423 8px, transparent 8px) 0 -4px,
- linear-gradient(90deg, #242423 8px, transparent 8px) -4px 0;
- background-color: #1abc9c;
- background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
-
+background-color: #1d1e22;
  font-family: "Audiowide";
  font-size: 100%;
- color: #31353d;
-
+ color: #fff;
 }
 
 header {
@@ -31,11 +23,11 @@ header {
  text-align: center;
  padding-top: 20px;
  padding-bottom: 80px;
- background-color:  #F5CB5C;
- background-size: cover;
+ background-color: #393f4d;
  width: 100%;
  height: auto;
- box-shadow: 0px 0px 10px rgba(0,0,0,1);
+box-shadow: 0px 0px 10px rgba(0,0,0,1);
+ border-bottom: 10px ridge #1d1e22;
 }
 
 /*botão log|cad*/
@@ -43,42 +35,42 @@ header {
 .button{
   position:relative;
   display:inline-block;
-  margin:-3px;
+  margin:-4px;
   z-index: 3;
-  margin-left: 86%;
+  margin-left: 92%;
 }
 
 .button a{
-  color:white;
+  color: #594F4F;
   font-weight:bold;
-  font-size:16px;
+  font-size:15px;
   text-align: center;
   text-decoration:none;
-  background-color: #1abc9c;
+  background-color: #d4d4dc;
   display:block;
   position:relative;
-  padding:20px 20px;
+  padding:15px 17px;
   
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   text-shadow: 0px 1px 0px #000;
   filter: dropshadow(color=#000, offx=0px, offy=1px);
   
-  -webkit-box-shadow:inset 0 1px 0 #1abc9c, 0 10px 0 #41393E;
-  -moz-box-shadow:inset 0 1px 0 #1abc9c, 0 10px 0 #41393E;
-  box-shadow:inset 0 1px 0 #1abc9c, 0 10px 0 #41393E;
+  -webkit-box-shadow:inset 0 1px 0  #696969, 0 10px 0 #594F4F;
+  -moz-box-shadow:inset 0 1px 0 #696969, 0 10px 0 #594F4F;
+  box-shadow:inset 0 1px 0 #696969, 0 10px 0 #594F4F;
   
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
 }
 
 .button a:active{
   top:10px;
-  background-color: #1abc9c;
+  background-color: #696969;
   
-  -webkit-box-shadow:inset 0 1px 0 #1abc9c, inset 0 -3px 0 #41393E;
-  -moz-box-shadow:inset 0 1px 0 #1abc9c, inset 0 -3pxpx 0 #41393E;
-  box-shadow:inset 0 1px 0 #1abc9c, inset 0 -3px 0 #41393E;
+  -webkit-box-shadow:inset 0 1px 0  #696969, inset 0 -3px 0 #594F4F;
+  -moz-box-shadow:inset 0 1px 0 #696969, inset 0 -3px 0 #594F4F;
+  box-shadow:inset 0 1px 0  #696969, inset 0 -3px 0  #594F4F;
 }
 
 .button:after{
@@ -90,17 +82,15 @@ header {
   bottom:-15px;
   left:-4px;
   z-index:-1;
-  background-color:#2B1800;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
+  background-color: #1d1e22;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
 }
-
-/*----fimheader*/
 
 .skew-menu {
   text-align: center;
-  margin-top: 2em;
+  margin-top:-4em;
 }
 .skew-menu ul {
   display: inline-block;
@@ -108,18 +98,18 @@ header {
   padding: 0;
   list-style: none;
   transform: skew(-25deg);
-  border: 5px solid #242423;
-  border-radius: 25px;
+  border: 10px ridge #1d1e22; 
+  border-radius: 30px;
 }
 .skew-menu ul li {
-  background: #fff;
+  background-color: #d4d4dc;
   float: left;
   border-right: 1px solid #eee;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   text-transform: uppercase;
   color: #555;
   font-weight: bolder;
-  transition: all 0.3s linear;
+  transition: all 0.2s linear;
 }
 .skew-menu ul li:first-child {
   border-radius: 20px 0 0 20px;
@@ -129,7 +119,7 @@ header {
   border-radius: 0 20px 20px 0;
 }
 .skew-menu ul li:hover {
-  background-color: #242423;
+  background-color: #1d1e22;
   color: #fff;
 }
 .skew-menu ul li a {
@@ -141,50 +131,84 @@ header {
   transform: skew(25deg);
 }
 
+/*---fimheader---*/
+
+/*---efeitoneon*/
+#textomid{
+  color: #696969;
+  text-align: center;
+  margin-top: 6%;
+  margin-bottom: 8%;
+}
+
+img#caixa{
+  position: absolute;
+  margin-top: 8%;
+  left: 50.1%;
+  transform: translate(-50%, -50%);
+
+}
+
+@keyframes neon{
+  from {
+    filter: drop-shadow(0 0 0 var(--cor-neon));
+  }
+  to {
+    filter: drop-shadow(0 0 30px var(--cor-neon));
+  }
+}
+
+img#texto{
+  animation: neon 2s alternate infinite ease-in-out;
+}
+img#caixa{
+  animation: neon 2s alternate infinite ease-in-out;
+}
+
+
+#caixa{
+  --cor-neon: #696969;
+}
+
+
 
 /* Column container */
 
 
 .Interface {  
-  background: #F5CB5C;
-  color: #aaa;
-  width: 1160px;
+  justify-content: center;
+  background-color: #d4d4dc;
+  color: #fff;
   max-width: 95%;
-  margin: 5.5% auto;
-  margin-top: 2%;
+  margin: 5% auto;
   padding: 4%;
-  border-radius: 6px;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  border-radius: 60px;
+  border: 20px solid #1d1e22;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  border: 4px solid  #242423;
-  border-radius: 20px;
 }
 
 
 /* Main column */
 .main-conteudo { 
-  color: #fff;
-  margin: 4% auto;
+  color: #555;
+  margin: 1% auto;
   font-size: 18px;
-  border-radius: 6px;
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-image:;
-  padding: 30px;
-  
+  padding: 25px;
 }
 .main-conteudo h2{
   text-align: center;
-  border-bottom: 2px solid black;
 }
 
 /* Fake imagem, just for this example */
 .fakeimg {
-  background-color: grey;
+  background-color: #1d1e22;
   width: 100%;
   padding: 20px;
+   border: 10px outset #1d1e22;
+   border-radius: 60px;
 }
+
+/*contato*/
 
 
 
@@ -192,8 +216,8 @@ header {
 .to-top {
   position: fixed;
   z-index: 9999;
-  bottom: 2px;
-  right: 2px;
+  bottom: 5px;
+  right: 6px;
   display: none;
 }
 .to-top a.back-to-top {
@@ -206,90 +230,92 @@ header {
   height: 50px;
   line-height: 50px;
   border-radius: 5px;
-  background-color: #242423;
-  opacity: 0.7;
+  background-color:  #444;
+  opacity: 0.5;
   transition: 0.3s;
-  border-radius: 20px;
 }
 .to-top a.back-to-top:hover {
   opacity: 1;
 }
 
-/* Social */
 /* Footer */
 .footer{
   text-align: center;
-  color: white;
-  background: #242423;
+  background-color: #696969;
   font-size: 16px;
-  padding: 4em;
-  margin-bottom: 0px;
-
+  padding: 2em;
+  border-top: 10px ridge #1d1e22;; 
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 #copy{
-  position: relative;
-  bottom: -55px;
+
+  margin-top: 1%;
+  text-align: center;
+  color: #d4d4dc;
   
 }
 
-#facebook {
-  background-color: #2e4a88;
-  box-shadow: 0 4px 0 #1B3D82;
-  text-shadow: 0 -1px -1px #1B3D82;
-  
-  display: inline;
-  position: relative;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  border-radius: 20px;
-  padding: 14px 50px;
+/*social botões*/
+.social {
+  padding: 10px;
+  display: inline-flex;
+   border: 12px solid  #696969;
+   background-color: #d4d4dc;
+   border-radius: 60px;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
-#facebook:hover {
-  background-color: #354F84;
+.social i {
+  padding: 0px 10px;
 }
-#facebook:active {
-  top: 2px;
-  box-shadow: 0 2px 0 #1B3D82;
+
+.social i:nth-child(1) {
+  color: #444;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 180ms;
 }
-#twitter {
-  background-color: #008DDE;
-  box-shadow: 0 4px 0 #0078BD;
-  
-  display: inline;
-  position: relative;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  border-radius: 20px;
-  padding: 14px 50px;
+
+.social i:nth-child(1):hover {
+  margin-top: -10px;
+  text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
+  transform: translate(0, -8);
 }
-#twitter:active {
-  top: 2px;
-  box-shadow: 0 2px 0 #0078BD;
+
+.social i:nth-child(2) {
+  color: #444;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 150ms;
 }
-#twitter:hover {
-  background-color: #1397D8;
+
+.social i:nth-child(2):hover {
+  margin-top: -10px;
+  text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
+  transform: translate(0, -8);
 }
-#google {
-  background-color: #CC3622;
-  box-shadow: 0 4px 0 #BA2714;
-  
-  display: inline;
-  position: relative;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  border-radius: 20px;
-  padding: 14px 50px;
+
+.social i:nth-child(3) {
+  color: #444;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  transition: all ease-in-out 150ms;
 }
-#google:active {
-  top: 2px;
-  box-shadow: 0 2px 0 #BA2714;
+
+.social i:nth-child(3):hover {
+  margin-top: -10px;
+  text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
+  transform: translate(0, -5);
 }
-#google:hover {
-  background-color: #D04829;
+.social i:nth-child(4) {
+  color: #444;
+  cursor: pointer;
+  text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 150ms;
+}
+.social i:nth-child(4):hover {
+  margin-top: -10px;
+  text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
+  transform: translate(0, -8);
 }
