--- a/css/orbita.css
+++ b/css/orbita.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Audiowide|Fugaz+One|Orbitron|Titan+One');
 
 
 
@@ -11,10 +10,13 @@
 	margin: 0 auto;
 	position: relative;
 	top: 0rem;
+	border: 20px solid #393f4d;
+	background-color: #d4d4dc;
+	box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 .ellipse-container .greeting {
-	color: #fff;
+	color: #1d1e22;
 	position: relative;
 	top: 20rem;
 	left: 1.9rem;
@@ -63,16 +65,15 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	color: #000;
 	position: absolute;
 	opacity: .3;
 }
 
 .ellipse__outer--thick {
-	width: 99.5%;
-	height: 99.5%;
-	border-color: #fff transparent;
-	border-width: 2px;
+	width: 99.9%;
+	height: 99.9%;
+	border-color: #1d1e22 transparent;
+	border-width: 5px;
 	transform: rotate(-45deg);
 	animation: ellipseRotate 15s ease-in-out infinite;
 }
@@ -80,19 +81,19 @@
 .ellipse__orbit {
 	width: 2.5rem;
 	height: 2.5rem;
-	border-width: 2px;
-	border-color: #fff;
+	border-width: 3px;
+	border-color: #1d1e22;
 	top: 5rem;
 	right: 6.75rem;
 }
 
 .ellipse__orbit:before {
 	content: '';
-	width: 0.7rem;
-	height: 0.7rem;
+	width: 0.9rem;
+	height: 0.9rem;
 	border-radius: 50%;
 	display: inline-block;
-	background-color: #fff;
+	background-color: #1d1e22;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
