--- a/css/orbita.css
+++ b/css/orbita.css
@@ -10,7 +10,7 @@
 	margin: 0 auto;
 	position: relative;
 	top: 0rem;
-	border: 20px solid #393f4d;
+	border: 20px solid #63ace5;
 	background-color: #d4d4dc;
 	box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
