--- a/css/passeio.css
+++ b/css/passeio.css
@@ -13,7 +13,8 @@ html * {
   box-sizing: border-box;
 }
 body {
-  background-color: #d4d4dc;
+  background: #4b86b4;
+ background-size: cover;
  font-family: "Audiowide";
  font-size: 100%;
  color: #fff;
@@ -22,11 +23,11 @@ body {
 header {
  padding-top: 20px;
  padding-bottom: 20px;
- background-color: #393f4d;
+ background-color:  #63ace5;
  width: 100%;
  height: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,1);
- border-bottom: 10px ridge #1d1e22;
+ border-bottom: 10px ridge #fff;  
 }
 
 /*---Slider---*/
@@ -37,7 +38,7 @@ header {
     width: 94%;
     height: 500px;
     overflow: hidden;
-    border: 20px solid #393f4d; 
+    border: 20px solid  #63ace5; 
     position: relative;
     border-radius: 60px;
     box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -88,7 +89,7 @@ header {
   padding: 0;
   list-style: none;
   transform: skew(-25deg);
-  border: 10px ridge #1d1e22; 
+  border: 10px ridge #fff;  
   border-radius: 30px;
 }
 .skew-menu ul li {
@@ -109,7 +110,7 @@ header {
   border-radius: 0 20px 20px 0;
 }
 .skew-menu ul li:hover {
-  background-color: #1d1e22;
+  background-color:  #aaaaaa;
   color: #fff;
 }
 .skew-menu ul li a {
@@ -126,6 +127,7 @@ header {
 
 /*---efeitoneon*/
 #textomid{
+  font-size: 26px;
   color: #555;
   text-align: center;
   margin-top: 6%;
@@ -140,41 +142,161 @@ img#caixa{
 
 }
 
-@keyframes neon{
-  from {
-    filter: drop-shadow(0 0 0 var(--cor-neon));
-  }
-  to {
-    filter: drop-shadow(0 0 30px var(--cor-neon));
-  }
+/*------Slide Lojas & Perfil-----*/
+
+.container{
+  border-radius: 60px;
+  background-color: #adcbe3;
+  border: 20px solid   #4b86b4;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
-img#texto{
-  animation: neon 2s alternate infinite ease-in-out;
-}
-img#caixa{
-  animation: neon 2s alternate infinite ease-in-out;
-}
-#caixa{
-  --cor-neon: #1d1e22;
-}
+.post-slide{
+    margin: 0 10px;
 
+  }
+  .post-slide .post-info{
+    padding: 10px 0;
+    margin: 0;
+    list-style: none;
+    color: #fff;
+  }
+
+  .post-slide .post-info li{
+    display: inline-block;
+    margin: 0 5px;
+  }
+
+  .post-slide .post-info li i{
+    margin-right: 8px;
+  }
+
+  .post-slide .post-info li a{
+    font-size: 11px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+  }
+
+  .post-slide .post-info li a:hover{
+    color:  #aaaaaa;
+    text-decoration: none;
+  }
+
+  .post-slide .post-img{
+    position: relative;
+  }
+
+  .post-slide .post-img:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background: rgba(0,0,0,0.6);
+    transition: opacity 0.40s linear 0s;
+    border-radius: 20px;
+  }
+
+  .post-slide:hover .post-img:before{
+    opacity: 1;
+    border-radius: 20px;
+  }
+
+  .post-slide .post-img img{
+    
+    border: 10px outset #d4d4dc;
+    border-radius: 20px;
+    width: 360px;
+    height: 360px;
+    background-color:#d4d4dc;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  }
+
+  .post-slide .read{
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
+    font-size: 14px;
+    color: #555;
+    text-transform: capitalize;
+    opacity: 0;
+    transition: all 0.40s linear 0s;
+
+  }
+
+  .post-slide .post-content{
+    padding: 35px 0;
+    position: relative;
+
+  }
+
+  .post-slide .post-author{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    position: absolute;
+    top: -45px;
+    right: 10px;
+    overflow: hidden;
+    border: 8px outset #d4d4dc;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1); 
+  }
+
+  .post-slide .post-author img{
+    width: 100%;
+    height: auto;
+  }
+
+  .post-slide .post-title{
+    font-size: 14px;
+    font-weight: bold;
+    color: #242423;
+    margin: 0 0 10px 0;
+    text-transform: uppercase;
+    transition: all 0.30s linear 0s;
+    background-color: #d4d4dc;
+    height: 45px;
+    margin-bottom: 0px;
+    border: 10px solid #adcbe3;
+     box-shadow: 0px 0px 10px rgba(0,0,0,1);
+    padding:5px;
+
+  }
+
+  .post-slide .post-description{
+    font-size: 13px;
+    color:  #d4d4dc;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #242423;
+    border: 10px solid #adcbe3;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+     padding:4px;
+  }
+
+
+
+/*-----fim Slide Lojas -------/*
 
 /* produtos*/
 
-.container {
+.containerprod {
   display: flex;
   justify-content: center;
-  background: url(../img/lojis.jpg) fixed;
+  background-color: #49657b;
+  background-size: 16px 16px;
   color: #555;
-  max-width: 95%;
+  max-width: 92.6%;
   margin: 5.5% auto;
   margin-top: 2%;
   padding: 4%;
   border-radius: 60px;
   padding-top: 1%;
   padding-bottom: 1%;
-   border: 20px solid #d4d4dc;;
+   border: 20px solid #4b86b4;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 
 }
@@ -193,82 +315,61 @@ img#caixa{
   display: block;
    width: 340px;
   height: 380px;
-  background-color: #1d1e22;
+  background-color:  #d4d4dc;
   border-radius: 20px;
-  border: 10px outset #393f4d; 
+  border: 10px ridge #fff;
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 .item img:hover{
-  background-color: #393f4d;
-  border: 10px outset #1d1e22;
-  transition: 1s;
+  background-color:  #aaaaaa;
+  border: 10px ridge  #aaaaaa;
+  transition: .9s;
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 #text{
   margin-top: 5px;
   padding: 10px;
   width: 340px;
-  height: 150px;
+  height: 155px;
   background-color: #d4d4dc;
-  border-radius: 10px;
+  border-radius: 30px;
   text-align: center;
-  border: 10px outset #cccccc; 
-   
+  border: 15px solid #49657b; 
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
-.button{
+.buttonprod{
+  top: 20px;
   position:relative;
-  margin: 0px;
+  display:inline-block;
   z-index: 3;
-  float: right;
-  bottom: -21px;
-}
+  
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #d4d4dc;
+  margin-left: 2%;
 
-.button a{
-  color: #d4d4dc;
-  font-size:30px;
+   border: 10px solid #d4d4dc;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+  padding: 8px 0px;
+  cursor: pointer;
+}
+.buttonprod a{
+  color: #1d1e22;
+  font-weight:bold;
   text-align: center;
   text-decoration:none;
-  background-color: #696969;
   display:block;
   position:relative;
-  padding: 1px 1px;
+}
+.buttonprod:hover{
+   border: 10px solid #49657b; 
   
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-shadow: 0px 1px 0px #000;
-  filter: dropshadow(color=#000, offx=0px, offy=1px);
-  
-  -webkit-box-shadow:inset 0 1px 0  #696969, 0 10px 0 #594F4F;
-  -moz-box-shadow:inset 0 1px 0 #696969, 0 10px 0 #594F4F;
-  box-shadow:inset 0 1px 0 #696969, 0 10px 0 #594F4F;
-  
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
+  transition: .6s;
 }
 
-.button a:active{
-  top:10px;
-  background-color: #696969;
-  
-  -webkit-box-shadow:inset 0 1px 0  #696969, inset 0 -3px 0 #594F4F;
-  -moz-box-shadow:inset 0 1px 0 #696969, inset 0 -3px 0 #594F4F;
-  box-shadow:inset 0 1px 0  #696969, inset 0 -3px 0  #594F4F;
-}
-
-.button:after{
-  content:"";
-  height:100%;
-  width:100%;
-  padding:4px;
-  position: absolute;
-  bottom:-15px;
-  left:-4px;
-  z-index:-1;
-  background-color: #1d1e22;
-  -webkit-border-radius: 35px;
-  -moz-border-radius: 35px;
-  border-radius: 35px;
-}
 /*----Fimproduto---*/
 
 
@@ -290,7 +391,7 @@ img#caixa{
   height: 50px;
   line-height: 50px;
   border-radius: 5px;
-  background-color:  #444;
+  background-color:  #49657b;
   opacity: 0.5;
   transition: 0.3s;
 }
@@ -301,11 +402,9 @@ img#caixa{
 /*---footer ---*/
 .footer{
   text-align: center;
-  background-color: #696969;
+  background-color:  #63ace5;
   font-size: 16px;
   padding: 2em;
-  border-top: 10px ridge #1d1e22; 
-  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 
 }
 #copy{
@@ -320,7 +419,7 @@ img#caixa{
 .social {
   padding: 10px;
   display: inline-flex;
-   border: 12px solid #696969;
+   border: 12px solid  #63ace5;
    border-radius: 60px;
   align-items: center;
   justify-content: center;
@@ -333,7 +432,7 @@ i {
 }
 
 .social i:nth-child(1) {
-  color: #444;
+  color: #3385c6;
   cursor: pointer;
   text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
   transition: all ease-in-out 180ms;
@@ -346,7 +445,7 @@ i {
 }
 
 .social i:nth-child(2) {
-  color: #444;
+  color: #84c1ff;
   cursor: pointer;
   text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
   transition: all ease-in-out 150ms;
@@ -371,7 +470,7 @@ i {
   transform: translate(0, -5);
 }
 .social i:nth-child(4) {
-  color: #444;
+  color:  #ff6f69;
   cursor: pointer;
   text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
   transition: all ease-in-out 150ms;
